--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
+    "firebase": "^10.6.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "swiper": "^11.0.5"
   },
