--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.8.4",
+    "@headlessui/react": "^1.7.17",
+    "@tanstack/react-query": "^5.8.6",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "lottie-react": "^2.4.0",
