--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet-async": "^2.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
@@ -36,7 +37,7 @@
     "match-sorter": "^6.3.1",
     "postcss": "^8.4.31",
     "react-router-dom": "^6.20.0",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0"
   }
