--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet-async": "^2.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-preloaders": "^3.0.3",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.0.5"
   },
