--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
     "react-preloaders": "^3.0.3",
+    "react-tabs": "^6.0.2",
+    "recharts": "^2.10.1",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.0.5"
   },
