--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.6",
+    "aos": "^2.3.4",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.1",
@@ -25,6 +27,7 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
     "react-preloaders": "^3.0.3",
+    "react-share": "^5.0.3",
     "react-tabs": "^6.0.2",
     "recharts": "^2.10.1",
     "sweetalert2": "^11.6.13",
